scripts/firewall/firewall_config/iptables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Allow established and related connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow loopback
-A INPUT -i lo -j ACCEPT

# Allow ping (ICMP) from all networks
-A INPUT -p icmp -j ACCEPT

-A FORWARD -p tcp -s 172.16.238.0/24 -d 172.16.239.0/24 -j ACCEPT

# Allow SSH access to firewall from internal network
-A INPUT -p tcp -s 172.16.240.0/24 --dport 22 -j ACCEPT

# Allow HTTP and SSH to DMZ server from internet
-A FORWARD -p tcp -s 172.16.238.0/24 -d 172.16.239.10 -m multiport --dports 80,22 -j ACCEPT

# Allow DMZ to access specific services on internal network (example: database)
-A FORWARD -p tcp -s 172.16.239.0/24 -d 172.16.240.0/24 --dport 3306 -j ACCEPT

# Allow internal network to access internet and DMZ
-A FORWARD -s 172.16.240.0/24 -j ACCEPT

# Allow traffic from DMZ to internal network
-A FORWARD -s 172.16.239.0/24 -d 172.16.240.0/24 -j ACCEPT

# Log dropped packets
-A INPUT -j LOG --log-prefix "iptables INPUT drop: " --log-level 7
-A FORWARD -j LOG --log-prefix "iptables FORWARD drop: " --log-level 7

# Set default policies
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Forward incoming HTTP and SSH traffic to DMZ server
-A PREROUTING -p tcp -m multiport --dports 80,22 -j DNAT --to-destination 172.16.239.10

# MASQUERADE rules for all networks
-A POSTROUTING -s 172.16.238.0/24 -j MASQUERADE
-A POSTROUTING -s 172.16.239.0/24 -j MASQUERADE
-A POSTROUTING -s 172.16.240.0/24 -j MASQUERADE

COMMIT
